# self-driving-car

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md
catkin_ws/src/controls/: CMakeLists.txt  README.md  odometry.py  package.xml
catkin_ws/src/controls/launch/: controls.launch  ik.launch  odometry.launch  teleop.launch
catkin_ws/src/controls/learning_joy/: CMakeLists.txt
catkin_ws/src/controls/learning_joy/scripts/: teleop.py
catkin_ws/src/controls/scripts/: README.txt  constants.py  inverse_kinematics.py  odometry.py  teleop-pub-sub.py
catkin_ws/src/driver/: CMakeLists.txt  package.xml
catkin_ws/src/driver/launch/: drive.launch  scan_and_map.launch  serialize_map.launch  serialize_poses.launch
catkin_ws/src/driver/scripts/: append_pose.py  serialize_map.py
catkin_ws/src/localization/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/localization/launch/: .localization.launch.swn  localization.launch
catkin_ws/src/mapping/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/mapping/costmap/: CMakeLists.txt  README.txt  package.xml
catkin_ws/src/mapping/costmap/scripts/: costmap_node.py
catkin_ws/src/mapping/gmapping/: CMakeLists.txt  package.xml
catkin_ws/src/mapping/laser_mapping/: CMakeLists.txt  README.txt  package.xml  pointcloud_processor.py
catkin_ws/src/mapping/laser_mapping/launch/: hector_mapping.launch  laser_mapping.launch  mapping.launch
catkin_ws/src/planning/: CMakeLists.txt  package.xml
catkin_ws/src/planning/launch/: dwa.launch  frenet.launch
catkin_ws/src/planning/scripts/: a_star_circuit.py  dynamic_window_approach.py  frenet.py  service_tutorial.py  sub_tutorial.py
catkin_ws/src/sensing/: README.md  package.xml
catkin_ws/src/sensing/launch/: sensing.launch
catkin_ws/src/sensing/rslidar_sdk/config/: config.yaml
catkin_ws/src/sensing/rslidar_sdk/launch/: start.launch
catkin_ws/src/sensing/sensing/: CMakeLists.txt  package.xml
catkin_ws/src/sensing/sensing/launch/: sensing.launch
catkin_ws/src/sensing/zed-ros-wrapper/zed_wrapper/params/: zed2.yaml
catkin_ws/src/simulation/: README.md
catkin_ws/src/simulation/csi_rover_controls/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/simulation/csi_rover_controls/config/: csi_rover_control.perspective  csi_rover_controller_topics.yaml
catkin_ws/src/simulation/csi_rover_controls/include/: rover_odom.h
catkin_ws/src/simulation/csi_rover_controls/scripts/: csi_rover_simple_controls.py  rover_motion_controller.py  rover_wheel_encoders.py  simple_rover_controller.py
catkin_ws/src/simulation/csi_rover_controls/src/: rover_odom.cpp
catkin_ws/src/simulation/csi_rover_description/: CMakeLists.txt  model.config  package.xml
catkin_ws/src/simulation/csi_rover_description/launch/: csi_rover.launch
catkin_ws/src/simulation/csi_rover_description/meshes/: camera.dae  robot_body.dae  wheel.dae
catkin_ws/src/simulation/csi_rover_description/urdf/: csi_rover.gazebo  csi_rover.xacro  macros.xacro  materials.xacro
catkin_ws/src/simulation/csi_rover_gazebo/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/simulation/csi_rover_gazebo/launch/: csi_rover.launch  csi_rover_rviz.launch
catkin_ws/src/simulation/csi_rover_gazebo/rviz/: basic_rviz_config.rviz
catkin_ws/src/simulation/csi_rover_gazebo/worlds/: simple_world.world
catkin_ws/src/simulation/csi_rover_localizer/: CMakeLists.txt  package.xml
catkin_ws/src/simulation/csi_rover_localizer/launch/: localizer.launch
catkin_ws/src/simulation/csi_rover_sensor_spoofers/: CMakeLists.txt  package.xml
catkin_ws/src/simulation/csi_rover_sensor_spoofers/launch/: volatile_detector.launch
catkin_ws/src/simulation/csi_rover_sensor_spoofers/msg/: vol_sensor_msg.msg
catkin_ws/src/simulation/csi_rover_sensor_spoofers/nodes/: volatile_detector
catkin_ws/src/simulation/csi_rover_vision/: CMakeLists.txt  package.xml
catkin_ws/src/simulation/csi_rover_vision/launch/: vision.launch
catkin_ws/src/simulation/csi_rover_vision/params/: stereo_config_2.yaml  stereo_config_3.yaml
catkin_ws/src/simulation/stereo_image_proc/src/nodelets/: point_cloud2.cpp
catkin_ws/src/systems/: CMakeLists.txt  README.md  README.txt  car.launch  joystick.launch  package.xml
catkin_ws/src/systems/launch/: car.launch  joystick.launch
catkin_ws/src/vesc/vesc_driver/launch/: vesc_driver_node.launch
catkin_ws/src/vesc/vesc_hw_interface/launch/: velocity_control_sample.launch
catkin_ws/src/vision/: CMakeLists.txt  jetson_main.py  jetson_plane_detection.py  live_place_detect.py  main.py  package.xml
dev-ops/: autossh-tunnel.service  config_eth0.sh  jetson-setup.md
racing/: a_star_circuit.py  cat  dynamic_window_approach.py  waypoints.sh
ros-jetson-image-build/: Dockerfile
script/: build  build-master  config  run  run-master
